syntax = "proto3";

message Empty{

}

message GenericMessage
{
  string message=1;
}